# NLPTriples

./: LICENSE  README.md  generated.json  pyproject.toml  required.json  requirements.txt  setup.py  triples.py
nlptriples/: parse_tree.py  triples.py
tests/: test_nlptriples.py
